# aims-gpl

./: CMakeLists.txt  README.md  aims-gpl.bcg  config-app-local.template  config-local.template  project_info.cmake
cmake/: aims-gpl-config.cmake.in  aims-gpl-use.cmake.in
pyaimsgui/: CMakeLists.txt  config-local.template  pyaimsgui.bcg
pyaimsgui/python/soma/aims/: aimsgui.py
pyaimsgui/src/: src.pro
pyaimsgui/src/sip_gui/: CMakeLists.txt  aimsgui.pro  aimsgui.sip  aimsgui.tpl  generatedtypes.py  qsqlgraphdatabase.sip  typessub.py
python/soma/aims/: gui.py
src/: CMakeLists.txt  aimsgui.pro
src/AimsAttributedViewer/: attributedViewer.cc  attributedViewer.h  attributedViewer.pro
src/AimsLabelSelector/: labelselector.cc
src/aimsqsqlgraphformat/: CMakeLists.txt  qsqlgraphformat.pro
src/aimsqsqlgraphformat/io/: qsqlgraphformat.cc  qsqlgraphformatheader.cc  qsqlgraphformatheader.h  qsqlgraphmanip.h
src/aimsqtformats/: CMakeLists.txt
src/aimsqtformats/io/: qtformatsW.h
src/aimsqtformats/plugin/: qtformatsplugin.cc
src/bundle_aimsqtformats/: CMakeLists.txt  bundleqt.pro
src/lib/: CMakeLists.txt  lib-aimsgui.pro
src/lib/attributedview/: attributedview.cc
src/lib/graph/: qsqlgraphdatabase.cc  qsqlgraphdatabase.h  qsqlgraphformatheader.cc
src/lib/selection/: labelselector.cc  labelselector.h  labelselector_p.h
