cmake_minimum_required( VERSION 2.6 )
find_package( brainvisa-cmake REQUIRED )
BRAINVISA_PROJECT()

BRAINVISA_FIND_PACKAGE( aims-free ${aims-gpl_VERSION} REQUIRED )
if( NOT DESIRED_QT_VERSION )
  find_package( Qt REQUIRED )
endif()
if( DESIRED_QT_VERSION EQUAL 4 )
  find_package( Qt4 COMPONENTS QtCore QtGui QtSql REQUIRED )
elseif( DESIRED_QT_VERSION EQUAL 5 )
  find_package( Qt5Core REQUIRED )
  find_package( Qt5Widgets REQUIRED )
  find_package( Qt5Sql REQUIRED )
endif()
find_package( QtVersion REQUIRED )
find_package( Doxygen )
find_package( PyQt${DESIRED_QT_VERSION} REQUIRED )

if( DESIRED_QT_VERSION EQUAL 4 )
  BRAINVISA_DEPENDENCY( RUN DEPENDS libqtcore4 RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV DEPENDS libqtcore4 DEV )
  BRAINVISA_DEPENDENCY( RUN DEPENDS libqtgui4 RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV DEPENDS libqtgui4 DEV )
endif()

BRAINVISA_DEPENDENCY( DEV DEPENDS "${BRAINVISA_PACKAGE_NAME}" RUN "= ${${BRAINVISA_PACKAGE_NAME}_VERSION}" )
BRAINVISA_DEPENDENCY( RUN DEPENDS aims-free RUN "= ${aims-free_VERSION}" )
BRAINVISA_DEPENDENCY( DEV DEPENDS aims-free DEV )

if( DESIRED_QT_VERSION EQUAL 4)
  include( "${QT_USE_FILE}" )
elseif( DESIRED_QT_VERSION EQUAL 5 )
  add_definitions( ${Qt5Widgets_DEFINITIONS} ${Qt5Sql_DEFINITIONS} )
  include_directories( ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Sql_INCLUDE_DIRS} )
  set( QT_LIBRARIES ${Qt5Widgets_LIBRARIES} ${Qt5Sql_LIBRARIES} )
endif()
include( "${AIMS-FREE_USE_FILE}" )

add_subdirectory( pyaimsgui )

BRAINVISA_CREATE_CMAKE_CONFIG_FILES()
